syntax = "proto3";

package rivet.backend.chat;

import "proto/common.proto";

message Message {
	rivet.common.Uuid chat_message_id = 1;
	rivet.common.Uuid thread_id = 2;
	int64 send_ts = 3;
	MessageBody body = 4;
}

message MessageBody {
	message Custom {
		rivet.common.Uuid sender_user_id = 1;
		rivet.common.Uuid plugin_id = 2;
		bytes body = 3;
	}

	message Text {
		rivet.common.Uuid sender_user_id = 1;
		string body = 2;
	}

	message ChatCreate {

	}

	message Deleted {
		rivet.common.Uuid sender_user_id = 1;
	}

	message UserFollow {

	}

	message TeamJoin {
		rivet.common.Uuid user_id = 1;
	}

	message TeamLeave {
		rivet.common.Uuid user_id = 1;
	}

	message TeamMemberKick {
		rivet.common.Uuid user_id = 1;
	}

	oneof kind {
		Custom custom = 1;
		Text text = 2;
		ChatCreate chat_create = 3;
		Deleted deleted = 4;

		UserFollow user_follow = 101;

		TeamJoin team_join = 201;
		TeamLeave team_leave = 202;
		TeamMemberKick team_member_kick = 203;
	}

	reserved 301, 302, 303, 304, 305;
}

message Thread {
	rivet.common.Uuid thread_id = 1;
	int64 create_ts = 2;
	Topic topic = 3;
}

message Topic {
	message Direct {
		rivet.common.Uuid user_a_id = 1;
		rivet.common.Uuid user_b_id = 2;
	}

	message Team {
		rivet.common.Uuid team_id = 1;
	}

	oneof kind {
		Team team = 1;
		Direct direct = 3;
	}

	reserved 2;
}

message Direct {
	rivet.common.Uuid user_a_id = 1;
	rivet.common.Uuid user_b_id = 2;
	int64 create_ts = 3;
}

message TypingStatus {
	message Idle {

	}
	
	message Typing {

	}

	oneof kind {
		Idle idle = 1;
		Typing typing = 2;
	}
}
